# acucys-ctf

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  tsconfig.json
bot/cogs/: ctfd.py  general.py
bot/utils/: __init__.py  ctfd_api.py  environment.py
src/: app.py  index.ts
src/acucys_ctf/: __init__.py  __main__.py
src/acucys_ctf/cogs/: ctfd.py  general.py
src/acucys_ctf/utils/: ctfd_api.py  environment.py
src/acucys_ctf/views/: scoreboard.py
src/cogs/: ctfd.py
src/commands/ctf/: challenges.ts
src/commands/misc/: ping.ts
src/config/: config.ts
src/ctfd_discord_bot/: __init__.py  __main__.py
src/ctfd_discord_bot/cogs/: ctfd.py  general.py
src/ctfd_discord_bot/utils/: ctfd_api.py  environment.py  errors.py
src/ctfd_discord_bot/views/: scoreboard.py
src/events/ready/: ready.ts
src/utils/: ctfd.ts  errors.py  logger.ts
