[project]
name = "ctfd-discord-bot"
version = "1.1.0"
description = "A discord bot to integrate with CTFd and provide useful features."
authors = [
    { name = "PyPylia", email = "me@pypylia.dev" },
    { name = "Hirusha Adikari", email = "hirushaadi@gmail.com" },
    { name = "Pasindu P", email = "hello@dec1bel.dev" },
]
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "discord-py (>=2.6.4,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "aiohttp (>=3.13.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "typedload (>=2.39,<3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ctfd-discord-bot = "ctfd_discord_bot.__main__:main"
